--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
+        "midtrans/midtrans-php": "^2.5",
         "realrashid/sweet-alert": "^4.1"
     },
     "require-dev": {
